--- a/.editorconfig
+++ b/.editorconfig
@@ -20,3 +20,9 @@ dotnet_diagnostic.CS8601.severity = silent
 
 # CS8603: Possible null reference return.
 dotnet_diagnostic.CS8603.severity = none
+
+# IDE0051: Remove unused private members
+dotnet_diagnostic.IDE0051.severity = silent
+
+# IDE0051: Remove unused private members
+dotnet_diagnostic.IDE0051.severity = none
